# warden

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: Dependencies.cmake  DependenciesFetch.cmake  FindXGBoost.cmake  Formatting.cmake  Targets.cmake  Tests.cmake
configs/: app_config.json  model_config.json  model_config_v2.json  properties.json
include/common/: config.hpp  defs.hpp  log_observer.hpp  logger.hpp  report_observer.hpp
include/services/: cli_service.hpp  config_service.hpp  detector_service.hpp  feature_service.hpp  model_service.hpp  scan_service.hpp
include/services/cli/: cli_service.hpp
include/services/core/: detector_service.hpp  feature_service.hpp  model_service.hpp  scan_service.hpp
include/services/system/: config_service.hpp  monitor_service.hpp
models/: feature_order.txt  feature_order_v2.txt  ransomware_model_v1.json  ransomware_model_v2.json
src/cli/: main.cpp
src/common/: config.cpp  logger.cpp
src/services/: cli_service.cpp  config_service.cpp  detector_service.cpp  feature_service.cpp  model_service.cpp  scan_service.cpp
src/services/cli/: cli_service.cpp
src/services/core/: detector_service.cpp  feature_service.cpp  (+2 more)
tests/: CMakeLists.txt  config_test.cpp  feature_test.cpp  model_test.cpp  test_warden.sh
tests/integration/: detector_service_test.cpp  monitor_service_test.cpp
tests/scripts/: cli_test.sh  gui_test.sh  monitor_test.sh
tests/unit/: config_service_test.cpp  config_test.cpp  detector_service_test.cpp  feature_service_test.cpp  logger_test.cpp  model_service_test.cpp  scan_service_test.cpp
(+2 files in other folders)
